@@ -15,27 +15,29 @@ remove = strict
 remove = Test::More
 
 [Prereqs]
-Acme::Alien::DontPanic                         = 0.023
-Acme::Ford::Prefect                            = 0.023
-Acme::Ford::Prefect::FFI                       = 0.20
-Alien::Base                                    = 0.019
+Acme::Alien::DontPanic                         = 0.025
+Acme::Ford::Prefect                            = 0.025
+Acme::Ford::Prefect::FFI                       = 0.22
+Alien::Base                                    = 0.022
 Alien::bison                                   = 0.11
-Alien::bz2                                     = 0.16
+Alien::bz2                                     = 0.17
 Alien::bz2::Installer                          = 0.05
 Alien::Editline                                = 0.04
-Alien::FFI                                     = 0.11
-Alien::flex                                    = 0.03
-Alien::gmake                                   = 0.06
-Alien::Libarchive                              = 0.24
+Alien::FFI                                     = 0.12
+Alien::flex                                    = 0.04
+Alien::gmake                                   = 0.10
+Alien::Hunspell                                = 0.02
+Alien::Libarchive                              = 0.26
 Alien::Libarchive::Installer                   = 0.12
+Alien::Libbz2                                  = 0.02
 Alien::LibYAML                                 = 0.1.5
 Alien::m4                                      = 0.06
 Alien::MSYS                                    = 0.07
 Alien::nasm                                    = 0.08
 Alien::o2dll                                   = 0.03
 Alien::Packages::Cygwin                        = 0.03
-Alien::patch                                   = 0.04
-;Alt::Alien::FFI::System                       = 0.11
+Alien::patch                                   = 0.06
+;Alt::Alien::FFI::System                       = 0.12
 AnyEvent::Finger                               = 0.10
 AnyEvent::FTP                                  = 0.08
 AnyEvent::Git::Wrapper                         = 0.07
@@ -62,11 +64,10 @@ Dist::Zilla::Plugin::jQuery                    = 0.03
 Dist::Zilla::Plugin::MathInt64                 = 0.08
 Dist::Zilla::Plugin::OurPkgVersion             = 0.06
 Dist::Zilla::Plugin::Template::Tiny            = 0.04
-Dist::Zilla::Plugin::Test::Version             = 1.02
+Dist::Zilla::Plugin::Test::Version             = 1.05
 Dist::Zilla::Plugin::TextTabs                  = 0.03
-Dist::Zilla::PluginBundle::ACPS                = 0.30
-Dist::Zilla::PluginBundle::Author::Plicease    = 1.78
-FFI                                            = 1.07
+Dist::Zilla::PluginBundle::Author::Plicease    = 1.83
+FFI                                            = 1.08
 FFI::CheckLib                                  = 0.11
 FFI::ExtractSymbols                            = 0.03
 FFI::Platypus                                  = 0.37
@@ -80,7 +81,7 @@ FFI::TinyCC                                    = 0.21
 FFI::Util                                      = 0.14
 File::LibMagic::FFI                            = 0.04
 File::Listing::Ftpcopy                         = 0.06
-File::Which                                    = 1.18
+File::Which                                    = 1.19
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.02
 Mojolicious::Plugin::Ident                     = 0.31
@@ -94,15 +95,15 @@ PlugAuth::Plugin::AuthenSimple                 = 0.01
 PlugAuth::Plugin::DBIAuth                      = 0.04
 PlugAuth::Plugin::Finger                       = 0.01
 PlugAuth::Plugin::LDAP                         = 0.06
-Shell::Config::Generate                        = 0.21
+Shell::Config::Generate                        = 0.22
 Shell::Guess                                   = 0.06
 String::Template                               = 0.18
 Term::EditLine                                 = 0.07
-Test::CChecker                                 = 0.05
-Test::Clustericious::Cluster                   = 0.20
-Test::Fixme                                    = 0.14
+Test::CChecker                                 = 0.06
+Test::Clustericious::Cluster                   = 0.21
+Test::Fixme                                    = 0.15
 Test::Script                                   = 1.10
-Test::Version                                  = 2.01
+Test::Version                                  = 2.03
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.05
 WebService::LiveJournal                        = 0.07
@@ -112,7 +113,7 @@ Win32::Process::Info                           = 1.022
 Win32::Shortcut::Readlink                      = 0.02
 Win32API::ProcessStatus                        = 0.05
 WWW::Bugzilla::BugTree                         = 0.05
-Yars                                           = 1.08
+Yars                                           = 1.09
 
 App::cpanminus                                 = 0
 autodie                                        = 0
